/logic_games:changed style /chrismas: changed style, JS

--- a/apl/logic_games/logic_games.html
+++ b/apl/logic_games/logic_games.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Master Quiz - Logic games</title>
 
   <link rel="stylesheet" href="/css/apl/logic_games/logic_games.css">
@@ -41,28 +42,26 @@
   <div id="nav"></div>
 
   <main>
-    <div class="puzzles">
-      <div class="container">
-        <div class="box">
-          <a class="box__link" href="/apl/logic_games/tree.html">Tree</a>
-          <img class="box__img" src="/img/logic_games/tree.png" alt="">
-        </div>
+    <div class="cards">
+        <a class="card" href="/apl/logic_games/tree.html">
+          <p>Tree</p>
+          <img class="card__img" src="/img/logic_games/tree.png" alt="">
+        </a>
 
-        <div class="box">
-          <a class="box__link" href="/apl/logic_games/electric_charges.html">Electric charges</a>
-          <img class="box__img" src="/img/logic_games/electric_charges.png" alt="">
-        </div>
+        <a class="card" href="/apl/logic_games/electric_charges.html">
+          <p>Electric charges</p>
+          <img class="card__img" src="/img/logic_games/electric_charges.png" alt="">
+        </a>
 
-        <div class="box">
-          <a class="box__link" href="/apl/logic_games/save_the_cow.html">Save the cow</a>
-          <img class="box__img" src="/img/logic_games/save_the_cow.png" alt="">
-        </div>
+        <a class="card" href="/apl/logic_games/save_the_cow.html">
+          <p>Save the cow</p>
+          <img class="card__img" src="/img/logic_games/save_the_cow.png" alt="">
+        </a>
 
-        <div class="box">
-          <a class="box__link" href="/apl/logic_games/hitori.html">Hitori</a>
-          <img class="box__img" src="/img/logic_games/hitori.png" alt="">
-        </div>
-      </div>
+        <a class="card" href="/apl/logic_games/hitori.html">
+          <p>Hitori</p>
+          <img class="card__img" src="/img/logic_games/hitori.png" alt="">
+        </a>
     </div>
   </main>
 
