--- a/apl/christmas.html
+++ b/apl/christmas.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Master Quiz - Christmas animation</title>
 
   <link rel="stylesheet" href="/css/apl/christmas.css">
@@ -48,10 +49,13 @@
     <h1>There will be a Christmas animation!</h1>
     <div class="section">
       <div class="input">
-        <button class="btn__animate">Animate</button>
-        <textarea class="text__animate" cols="40" rows="20"></textarea>
+        <button class="input__btn">Animate</button>
+        <textarea class="input__text" cols="30" rows="18"></textarea>
       </div>
-      <div class="animation"></div>
+      <div class="output">
+        <button class="output__btn hide">Finish</button>
+        <textarea class="output__text hide" cols="30" rows="18"></textarea>
+      </div>
     </div>
   </main>
 
