--- a/apl/christmas.html
+++ b/apl/christmas.html
@@ -50,7 +50,7 @@
     <div class="section">
       <div class="input">
         <button class="input__btn">Animate</button>
-        <textarea class="input__text" cols="30" rows="18"></textarea>
+        <textarea class="input__text" cols="30" rows="18" placeholder="&#10; Enter an image made&#10; with characters,&#10; or just press animate!"></textarea>
       </div>
       <div class="output">
         <button class="output__btn hide">Finish</button>
