--- a/apl/logic_games/logic_games.html
+++ b/apl/logic_games/logic_games.html
@@ -44,22 +44,22 @@
   <main>
     <div class="cards">
         <a class="card" href="/apl/logic_games/tree.html">
-          <p>Tree</p>
+          <h2>Tree</h2>
           <img class="card__img" src="/img/logic_games/tree.png" alt="">
         </a>
 
         <a class="card" href="/apl/logic_games/electric_charges.html">
-          <p>Electric charges</p>
+          <h2>Electric charges</h2>
           <img class="card__img" src="/img/logic_games/electric_charges.png" alt="">
         </a>
 
         <a class="card" href="/apl/logic_games/save_the_cow.html">
-          <p>Save the cow</p>
+          <h2>Save the cow</h2>
           <img class="card__img" src="/img/logic_games/save_the_cow.png" alt="">
         </a>
 
         <a class="card" href="/apl/logic_games/hitori.html">
-          <p>Hitori</p>
+          <h2>Hitori</h2>
           <img class="card__img" src="/img/logic_games/hitori.png" alt="">
         </a>
     </div>
