hamburger_menu.js

--- a/apl/logic_games/tree.html
+++ b/apl/logic_games/tree.html
@@ -10,6 +10,7 @@
   <script src="/js/apl/apl.js" defer></script>
   <script src="/js/apl/logic_games/puzzle_utils.js" defer></script>
   <script src="/js/apl/logic_games/tree.js" defer></script>
+  <script src="/js/hamburger_menu.js" defer></script>
   <script>
     (async () => {
       let header = await fetch('/base/header.html');
@@ -20,21 +21,6 @@
 
       let footer = await fetch('/base/footer.html');
       document.querySelector('#footer').innerHTML = await footer.text();
-
-      // Menu animation
-      const hamburger = document.querySelector(".ham");
-      const navsub = document.querySelector(".menu");
-      hamburger.addEventListener('click', () => {
-        hamburger.classList.toggle("change");
-        navsub.classList.toggle("menu-change");
-
-        if (navsub.classList.contains("menu-change")) {
-          scrollTop = window.pageYOffset || document.documentElement.scrollTop;
-          scrollLeft = window.pageXOffset || document.documentElement.scrollLeft;
-
-          window.onscroll = () => window.scrollTo(scrollLeft, scrollTop);
-        } else window.onscroll = {};
-      });
     })();
   </script>
 </head>
