--- a/base/header.html
+++ b/base/header.html
@@ -11,6 +11,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oleo+Script:wght@700&display=swap">
+  
+  <script src="/js/hamburger_menu.js" defer></script>
 </head>
 
 <body>
