--- a/contact_me.html
+++ b/contact_me.html
@@ -51,7 +51,7 @@
 
           <button type="submit" class="btn btn-lg btn-dark btn-block">Submit Form</button>
 
-          <input type="hidden" id="_next" value="/thanks.html"> <!-- !How to redirect? -->
+          <input type="hidden" id="_next" value="/thanks.html"> <!-- ?How to redirect -->
           <input type="text" id="_honey" style="display:none">
           <input type="hidden" id="_autoresponse"
             value="Thank you for contacting me. I will reply as soon as possible!">
