--- a/apl/index.html
+++ b/apl/index.html
@@ -7,6 +7,7 @@
 
   <link rel="stylesheet" href="/css/apl/index.css">
 
+  <script src="/js/hamburger_menu.js" defer></script>
   <script>
     (async () => {
       let header = await fetch('/base/header.html');
@@ -17,21 +18,6 @@
 
       let footer = await fetch('/base/footer.html');
       document.querySelector('#footer').innerHTML = await footer.text();
-
-      // Menu animation
-      const hamburger = document.querySelector(".ham");
-      const navsub = document.querySelector(".menu");
-      hamburger.addEventListener('click', () => {
-        hamburger.classList.toggle("change");
-        navsub.classList.toggle("menu-change");
-
-        if (navsub.classList.contains("menu-change")) {
-          scrollTop = window.pageYOffset || document.documentElement.scrollTop;
-          scrollLeft = window.pageXOffset || document.documentElement.scrollLeft;
-
-          window.onscroll = () => window.scrollTo(scrollLeft, scrollTop);
-        } else window.onscroll = {};
-      });
     })();
   </script>
 </head>
