contact page style & minor changes

--- a/apl/index.html
+++ b/apl/index.html
@@ -7,7 +7,7 @@
 
   <link rel="stylesheet" href="/css/apl/index.css">
 
-  <script src="/js/hamburger_menu.js" defer></script>
+  <script src="/js/hamburger_menu.js"></script>
   <script>
     (async () => {
       let header = await fetch('/base/header.html');
@@ -23,15 +23,15 @@
 </head>
 
 <body>
-  <div id="header"></div>
+  <section id="header"></section>
 
-  <div id="nav"></div>
+  <section id="nav"></section>
 
   <main>
     <h1>This is Dyalog APL section!</h1>
   </main>
 
-  <div id="footer"></div>
+  <section id="footer"></section>
 </body>
 
 </html>
