--- a/apl/logic_games/electric_charges.html
+++ b/apl/logic_games/electric_charges.html
@@ -10,7 +10,7 @@
   <script src="/js/apl/apl.js" defer></script>
   <script src="/js/apl/logic_games/puzzle_utils.js" defer></script>
   <script src="/js/apl/logic_games/electric_charges.js" defer></script>
-  <script src="/js/hamburger_menu.js" defer></script>
+  <script src="/js/hamburger_menu.js"></script>
   <script>
     (async () => {
       let header = await fetch('/base/header.html');
@@ -26,9 +26,9 @@
 </head>
 
 <body>
-  <div id="header"></div>
+  <section id="header"></section>
 
-  <div id="nav"></div>
+  <section id="nav"></section>
 
   <main>
     <div class="intro">
@@ -76,7 +76,7 @@
     </div>
   </main>
 
-  <div id="footer"></div>
+  <section id="footer"></section>
 </body>
 
 </html>
