--- a/apl/logic_games/logic_games.html
+++ b/apl/logic_games/logic_games.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="/css/apl/logic_games/logic_games.css">
 
   <script src="/js/hamburger_menu.js" defer></script>
+  <script src="/js/hamburger_menu.js"></script>
   <script>
     (async () => {
       let header = await fetch('/base/header.html');
@@ -23,9 +24,9 @@
 </head>
 
 <body>
-  <div id="header"></div>
+  <section id="header"></section>
 
-  <div id="nav"></div>
+  <section id="nav"></section>
 
   <main>
     <div class="cards">
@@ -51,7 +52,7 @@
     </div>
   </main>
 
-  <div id="footer"></div>
+  <section id="footer"></section>
 </body>
 
 </html>
