--- a/base/header.html
+++ b/base/header.html
@@ -19,14 +19,14 @@
     <a href="/index.html" class="name">Master quiz</a>
 
     <nav class="navbar">
-      <div class="ham">
+      <div class="ham" onclick="toggleMenu()">
         <span class="bar1"></span>
         <span class="bar2"></span>
         <span class="bar3"></span>
       </div>
       <ul class="menu">
-        <li><a href="/apl/" class="menu-link">Dyalog APL</a></li>
-        <li><a href="/contact_me.html" class="menu-link">Contact Me</a></li>
+        <li><a href="/apl/">Dyalog APL</a></li>
+        <li><a href="/contact_me.html">Contact Me</a></li>
       </ul>
     </nav>
   </header>
