--- a/thanks.html
+++ b/thanks.html
@@ -6,8 +6,8 @@
   <title>Master Quiz - Thanks</title>
 
   <link rel="stylesheet" href="/css/index.css">
-
-  <script src="/js/hamburger_menu.js" defer></script>
+  
+  <script src="/js/hamburger_menu.js"></script>
   <script>
     (async () => {
       let header = await fetch('/base/header.html');
@@ -22,13 +22,13 @@
 </head>
 
 <body>
-  <div id="header"></div>
+  <section id="header"></section>
 
   <main>
     <h1>This is the thanks page!</h1>
   </main>
 
-  <div id="footer"></div>
+  <section id="footer"></section>
 </body>
 
 </html>
