--- a/apl/christmas.html
+++ b/apl/christmas.html
@@ -11,7 +11,7 @@
   <script src="/js/apl/apl.js"></script>
   <script src="/js/apl/christmas.js" defer></script>
 
-  <script src="/js/hamburger_menu.js" defer></script>
+  <script src="/js/hamburger_menu.js"></script>
   <script>
     (async () => {
       let header = await fetch('/base/header.html');
@@ -27,9 +27,9 @@
 </head>
 
 <body>
-  <div id="header"></div>
+  <section id="header"></section>
 
-  <div id="nav"></div>
+  <section id="nav"></section>
 
   <main>
     <h1>There will be a Christmas animation!</h1>
@@ -45,7 +45,7 @@
     </div>
   </main>
 
-  <div id="footer"></div>
+  <section id="footer"></section>
 </body>
 
 </html>
