--- a/apl/logic_games/save_the_cow.html
+++ b/apl/logic_games/save_the_cow.html
@@ -11,6 +11,7 @@
   <script src="/js/apl/logic_games/puzzle_utils.js" defer></script>
   <script src="/js/apl/logic_games/save_the_cow.js" defer></script>
   <script src="/js/hamburger_menu.js" defer></script>
+  <script src="/js/hamburger_menu.js"></script>
   <script>
     (async () => {
       let header = await fetch('/base/header.html');
@@ -26,9 +27,9 @@
 </head>
 
 <body>
-  <div id="header"></div>
+  <section id="header"></section>
 
-  <div id="nav"></div>
+  <section id="nav"></section>
 
   <main>
     <div class="intro">
@@ -75,7 +76,7 @@
     </div>
   </main>
 
-  <div id="footer"></div>
+  <section id="footer"></section>
 </body>
 
 </html>
