--- a/contact_me.html
+++ b/contact_me.html
@@ -9,6 +9,7 @@
   <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
 
   <script src="/js/hamburger_menu.js" defer></script>
+  <script src="/js/hamburger_menu.js"></script>
   <script>
     (async () => {
       let header = await fetch('/base/header.html');
@@ -21,32 +22,62 @@
 </head>
 
 <body>
-  <div id="header"></div>
+  <section id="header"></section>
 
   <main>
     <div class="contact-box">
       <div class="left"></div>
       <div class="right">
+
         <h2>Contact Me</h2>
-        <form target="_blank" action="https://formsubmit.co/67f2dabb477f56ac1c41d324c50c6677" method="POST">
-          <input class="field" id="name" placeholder="Your Name" maxlength="32" pattern="\S+.*" required>
-          <input class="field" id="email" placeholder="Email adress" maxlength="32" type="email" pattern="\S+.*"
-            required>
-          <input class="field" id="_subject" placeholder="Subject" maxlength="32" pattern="\S+.*" required>
-          <textarea class="field" id="message" placeholder="Message" maxlength="1024" required></textarea>
+        <form action="https://formsubmit.co/67f2dabb477f56ac1c41d324c50c6677" method="POST">
+          <input name="name" placeholder="Your Name" maxlength="32" pattern="\S+.*" required>
+          <input type="email" name="email" placeholder="Your email adress" maxlength="32" pattern="\S+.*" required>
+          <textarea id="message" name="message" spellcheck="false" placeholder="Your message" maxlength="1024"
+            pattern="\S+.*" required></textarea>
+          <section class="file__input">
+            <label>
+              <input class="uploadBtn" type="file" name="attachment" accept="image/png, image/jpeg">
+              <span>Upload a file</span>
+            </label>
+            <p class="optional">Optional</p>
+            <p class="file__name"></p>
+          </section>
 
-          <button type="submit" class="btn btn-lg btn-dark btn-block">Submit Form</button>
+          <input type="hidden" name="_next" value="https://masterquiz.github.io/thanks.html">
+          <input type="hidden" name="_subject" value="New submission!">
+          <input type="text" name="_honey" style="display:none">
+          <input type="hidden" name="_autoresponse"
+            value="Thank you for contacting me.&#10;I will reply as soon as possible!">
+          <input type="hidden" name="_template" value="table">
 
-          <input type="hidden" id="_next" value="/thanks.html"> <!-- ?How to redirect -->
-          <input type="text" id="_honey" style="display:none">
-          <input type="hidden" id="_autoresponse"
-            value="Thank you for contacting me. I will reply as soon as possible!">
-          <input type="hidden" id="_template" value="box">
+          <button type="submit">Submit Form</button>
         </form>
       </div>
   </main>
 
-  <div id="footer"></div>
+  <section id="footer"></section>
+
+  <script>
+    // Check validity of text message
+    ['input', 'change', 'propertychange'].forEach((event) => {
+      document.getElementById('message').addEventListener(event, () => {
+        let textarea = document.getElementById('message');
+        let pattern = textarea.getAttribute('pattern');
+        
+        let patternRegex = new RegExp("^" + pattern.replace(/^\^|\$$/g, '') + "$", "g");
+        
+        if (textarea.value.match(patternRegex)) textarea.style.backgroundColor = '#FFF275';
+        else textarea.style.backgroundColor = '#FFC566';
+      });
+    });
+
+    // Display file path, when uploaded
+    document.querySelector('.uploadBtn').onchange = () => {
+      document.querySelector('.optional').style.display = 'none';
+      document.querySelector('.file__name').innerText = `Uploaded: "${document.querySelector('.uploadBtn').value}"`;
+    };
+  </script>
 </body>
 
 </html>
