--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <link rel="stylesheet" href="/css/index.css">
 
-  <script src="/js/hamburger_menu.js" defer></script>
+  <script src="/js/hamburger_menu.js"></script>
   <script>
     (async () => {
       let header = await fetch('/base/header.html');
@@ -20,13 +20,13 @@
 </head>
 
 <body>
-  <div id="header"></div>
+  <section id="header"></section>
 
   <main>
     <h1>This is the index page!</h1>
   </main>
 
-  <div id="footer"></div>
+  <section id="footer"></section>
 </body>
 
 </html>
