Dyalog APL index

--- a/apl/index.html
+++ b/apl/index.html
@@ -28,7 +28,26 @@
   <section id="nav"></section>
 
   <main>
-    <h1>This is Dyalog APL section!</h1>
+    <h1>Dyalog APL</h1>
+
+    <div class="paragraph left">
+      <h3>What's APL?</h3>
+      <p>APL is an <u>array-oriented</u> programming language.</p>
+      <p>
+        Its natural, concise syntax lets you develop <u>shorter programs</u> while <u>thinking more</u>
+        about the problem you're trying to solve than how to express it to a computer.
+      </p>
+      <a class="source" href="https://aplwiki.com" target="_"><u>~APL wiki</u></a>
+    </div>
+
+    <div class="paragraph left">
+      <h3>What can you expect to find?</h3>
+      <p>I've posted and I'll post some of my projects written in APL. For example:</p>
+      <ol>
+        <li>Four logic games solvers</li>
+        <li>A Christmas animation</li>
+      </ol>
+    </div>
   </main>
 
   <section id="footer"></section>
