--- a/apl/logic_games/tree.html
+++ b/apl/logic_games/tree.html
@@ -10,17 +10,12 @@
   <script src="/js/apl/apl.js" defer></script>
   <script src="/js/apl/logic_games/puzzle_utils.js" defer></script>
   <script src="/js/apl/logic_games/tree.js" defer></script>
-  <script src="/js/hamburger_menu.js"></script>
+
+  <script src="/js/load_header_footer.js"></script>
   <script>
     (async () => {
-      let header = await fetch('/base/header.html');
-      document.querySelector('#header').innerHTML = await header.text();
-
       let nav = await fetch('/base/logic_games_nav.html');
       document.querySelector('#nav').innerHTML = await nav.text();
-
-      let footer = await fetch('/base/footer.html');
-      document.querySelector('#footer').innerHTML = await footer.text();
     })();
   </script>
 </head>
@@ -33,45 +28,42 @@
   <main>
     <div class="intro">
       <h1>Tree solver</h1>
-      <p class="description">
-        This Tree solver is entirely implemented in APL. Just fill the puzzle map and press solve! Change the
-        dimension, creating a puzzle with a side length from five to eleven cells. Use the create button to
-        create a valid puzzle.
+      <p>
+        Fill the puzzle below and press solve! Change the dimension, creating a puzzle with a side length from five
+        to eleven cells.
       </p>
+      <p>Use the create button to create a valid puzzle.</p>
     </div>
 
-    <div class="sections">
-      <div class="inputSection">
-        <div class="dimension">
-          <!-- !Input refresha la pagina -->
-          <!-- TODO: Restartare il valore a "", facendo vedere il placeholder -->
-          <input class="dimInput" type="number" placeholder="Dimension..." onClick="this.select();">
-          <button class="dimButton" onclick="changeDim()" type="button">✓</button>
+    <div class="cards">
+      <section class="input">
+        <div class="input__dimension">
+          <input class="dimension__value" type="number" placeholder="Dimension">
+          <button class="dimension__button" type="button">✓</button>
         </div>
 
-        <div class="tableInp"></div>
+        <div class="input__table"></div>
 
-        <div class="btnsInp ">
-          <button class="trySolve" onClick="trySolve()" type="button">Try</button>
-          <button class="solve" onClick="solve()" type="button">Solve</button>
-          <button class="create" onClick="create()" type="button">Create</button>
-          <!-- * Change class to restart -->
-          <button class="clear" onClick="restart()" type="button">Restart</button>
+        <div class="input__btns">
+          <button class="btns__solve" type="button">Solve</button>
+          <button class="btns__create" type="button">Create</button>
+          <button class="btns__try" type="button">Try</button>
+          <button class="btns__restart" type="button">Restart</button>
         </div>
-      </div>
+      </section>
 
-      <div class="outputSection">
-        <label class="solLabel">Solution</label>
-        <div class="tableOut"></div>
-      </div>
+      <section class="output">
+        <label class="output__label">Solution</label>
+        <div class="output__table"></div>
+      </section>
 
-      <div class="trySection">
-        <label class="tryLabel"></label>
-        <table class="tableTry"></table>
-        <div class="btnsTry">
-          <button class="verify" onclick="verify()">Verify</button>
+      <section class="try">
+        <label class="try__label"></label>
+        <table class="try__table"></table>
+        <div class="try__btns">
+          <button class="btns__verify">Verify</button>
         </div>
-      </div>
+      </section>
     </div>
   </main>
 
