--- a/base/header.html
+++ b/base/header.html
@@ -2,8 +2,6 @@
 <html lang="en">
 
 <head>
-  <link rel="shortcut icon" href="/favicon.ico">
-
   <link rel="stylesheet" href="/css/main.css">
   <link rel="stylesheet" href="/css/base/header.css">
 
@@ -16,17 +14,17 @@
 <body>
   <header>
     <img class="logo" src="/img/logo.svg">
-    <a href="/index.html" class="name">Master quiz</a>
+    <a href="/" class="name">Master Quiz</a>
 
     <nav class="navbar">
-      <div class="ham" onclick="toggleMenu()">
+      <div class="ham">
         <span class="bar1"></span>
         <span class="bar2"></span>
         <span class="bar3"></span>
       </div>
       <ul class="menu">
-        <li><a href="/apl/">Dyalog APL</a></li>
-        <li><a href="/contact_me.html">Contact Me</a></li>
+        <li><a href="/#dyalog-apl">Dyalog APL</a></li>
+        <li><a href="/#contact-me">Contact Me</a></li>
       </ul>
     </nav>
   </header>
