Happy new year animation

--- a/apl/animations/christmas.html
+++ b/apl/animations/christmas.html
@@ -5,10 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Master Quiz - Christmas animation</title>
 
-  <link rel="stylesheet" href="/css/apl/christmas.css">
+  <link rel="stylesheet" href="/css/apl/animations/christmas.css">
 
   <script src="/js/apl/apl.js"></script>
-  <script src="/js/apl/christmas.js" defer></script>
+  <script src="/js/apl/animations/christmas.js" defer></script>
 
   <script src="/js/load_header_footer.js"></script>
   <script>
