--- a/base/logic_games_nav.html
+++ b/base/logic_games_nav.html
@@ -9,7 +9,7 @@
   <nav>
     <ul class="pages">
       <li><a href="/apl/logic_games/logic_games.html">Logic Games</a></li>
-      <li><a href="/apl/christmas.html">Christmas</a></li>
+      <li><a href="/apl/animations/animations.html">Animations</a></li>
     </ul>
   </nav>
 </body>
