--- a/index.html
+++ b/index.html
@@ -61,10 +61,11 @@
             <p>Try them!</p>
           </a>
 
-          <a class="card" href="/apl/christmas.html">
+          <a class="card" href="/apl/animations/animations.html">
             <h2>Animations</h2>
             <p>Have you ever wanted to animate an image made with characters?</p>
             <p>Now you can, add a <u>Christmas animation</u> to whatever you want!</p>
+            <p>Otherwise check the <u>Happy New Year</u> animation.</p>
           </a>
         </div>
       </section>
