--- a/base/footer.html
+++ b/base/footer.html
@@ -10,10 +10,10 @@
     <div class="inner-footer">
       <div class="quick-links">
         <ul>
-          <li class="quick-items"><a href="/index.html">Home</a></li>
-          <li class="quick-items"><a href="/apl/index.html">Dyalog APL</a></li>
-          <li class="quick-items"><a href="/contact_me.html">Contact me</a></li>
-          <li class="quick-items"><a href="https://github.com/Masterquiz/">GitHub</a></li>
+          <li class="quick-items"><a href="/">Home</a></li>
+          <li class="quick-items"><a href="/#dyalog-spl">Dyalog APL</a></li>
+          <li class="quick-items"><a href="/#contact-me">Contact me</a></li>
+          <li class="quick-items"><a href="https://github.com/Masterquiz/" target='_'>GitHub</a></li>
         </ul>
       </div>
     </div>
