--- a/base/footer.html
+++ b/base/footer.html
@@ -11,7 +11,7 @@
       <div class="quick-links">
         <ul>
           <li class="quick-items"><a href="/">Home</a></li>
-          <li class="quick-items"><a href="/#dyalog-spl">Dyalog APL</a></li>
+          <li class="quick-items"><a href="/#dyalog-apl">Dyalog APL</a></li>
           <li class="quick-items"><a href="/#contact-me">Contact me</a></li>
           <li class="quick-items"><a href="https://github.com/Masterquiz/" target='_'>GitHub</a></li>
         </ul>
