--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <section class="text-block">
         <h2>What can you find in this section?</h2>
         <p>I've posted and I'll post some of my projects written in APL.</p>
-        <p>Soon you'll find also a blog section, where I'll show and explain the functions that I've created. Stay tuned!</p>
+        <p>Soon you'll find also a blog section, where I'll show and explain the functions that I've created. I'm currently working also to improve the user experience with logic games. Stay tuned!</p>
 
         <div class="cards">
           <a class="card" href="/apl/logic_games/logic_games.html">
