--- a/apl/logic_games/tree.html
+++ b/apl/logic_games/tree.html
@@ -30,7 +30,7 @@
       <h1>Tree solver</h1>
       <p>
         Fill the puzzle below and press solve! Change the dimension, creating a puzzle with a side length from five
-        to eleven cells.
+        to eight cells.
       </p>
       <p>Use the create button to create a valid puzzle.</p>
     </div>
