Added Hitori Improved puzzles JS

--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
       <section class="text-block">
         <h2>What can you find in this section?</h2>
         <p class="text-block__center">I've posted and I'll post some of my projects written in APL.</p>
-        <p class="text-block__center">Soon you'll find also a blog section, where I'll show and explain the functions that I've created. I'm currently working also to improve the user experience with logic games. Stay tuned!</p>
+        <p class="text-block__center">Soon you'll find also a blog section, where I'll show and explain the functions
+          that I've created. I'm currently working also to improve the user experience with logic games. Stay tuned!</p>
 
         <div class="cards">
           <a class="card" href="/apl/logic_games/logic_games.html">
@@ -108,7 +109,7 @@
 
   <script>
     // Check validity of textarea
-    ['input', 'change', 'propertychange'].forEach((event) => {
+    ['input', 'change', 'propertychange'].forEach(event => {
       document.getElementById('message').addEventListener(event, () => {
         let textarea = document.getElementById('message');
         let pattern = textarea.getAttribute('pattern');
