--- a/apl/logic_games/hitori.html
+++ b/apl/logic_games/hitori.html
@@ -7,7 +7,7 @@
 
   <link rel="stylesheet" href="/css/apl/logic_games/puzzle.css">
 
-  <script src="/js/apl/apl.js" defer></script>
+  <script src="/js/apl/apl.js"></script>
   <script src="/js/apl/logic_games/puzzle_utils.js" defer></script>
   <script src="/js/apl/logic_games/hitori.js" defer></script>
 
