Added Save the cow

--- a/apl/logic_games/electric_charges.html
+++ b/apl/logic_games/electric_charges.html
@@ -26,36 +26,32 @@
   <section id="nav"></section>
 
   <main>
-    <div class="intro">
-      <h1>Electric charges solver</h1>
-      <p>Fill the puzzle below and press solve! Change the dimension, creating a puzzle with a side length from four to
-        eight cells.</p>
-    </div>
+    <h1>Electric charges solver</h1>
 
     <div class="cards">
       <section class="input">
         <div class="input__dimension">
           <input class="dimension__value" type="number" placeholder="Dimension">
-          <button class="dimension__button" type="button">✓</button>
+          <button class="dimension__button">✓</button>
         </div>
 
         <div class="input__table"></div>
 
         <div class="input__btns">
-          <button class="btns__solve" type="button">Solve</button>
-          <button class="btns__create" type="button">Create</button>
-          <button class="btns__try" type="button">Try</button>
-          <button class="btns__restart" type="button">Restart</button>
+          <button class="btns__solve">Solve</button>
+          <button class="btns__create">Create</button>
+          <button class="btns__try">Try</button>
+          <button class="btns__restart">Restart</button>
         </div>
       </section>
 
       <section class="output">
-        <label class="output__label">Solution</label>
+        <h2>Solution</h2>
         <div class="output__table"></div>
       </section>
 
       <section class="try">
-        <label class="try__label"></label>
+        <h2>Solve</h2>
         <table class="try__table"></table>
         <div class="try__btns">
           <button class="btns__verify">Verify</button>
