--- a/apl/logic_games/tree.html
+++ b/apl/logic_games/tree.html
@@ -26,14 +26,7 @@
   <section id="nav"></section>
 
   <main>
-    <div class="intro">
-      <h1>Tree solver</h1>
-      <p>
-        Fill the puzzle below and press solve! Change the dimension, creating a puzzle with a side length from five
-        to eight cells.
-      </p>
-      <p>Use the create button to create a valid puzzle.</p>
-    </div>
+    <h1>Tree solver</h1>
 
     <div class="cards">
       <section class="input">
@@ -45,20 +38,20 @@
         <div class="input__table"></div>
 
         <div class="input__btns">
-          <button class="btns__solve" type="button">Solve</button>
-          <button class="btns__create" type="button">Create</button>
-          <button class="btns__try" type="button">Try</button>
-          <button class="btns__restart" type="button">Restart</button>
+          <button class="btns__solve">Solve</button>
+          <button class="btns__create">Create</button>
+          <button class="btns__try">Try</button>
+          <button class="btns__restart">Restart</button>
         </div>
       </section>
 
       <section class="output">
-        <label class="output__label">Solution</label>
+        <h2>Solution</h2>
         <div class="output__table"></div>
       </section>
 
       <section class="try">
-        <label class="try__label"></label>
+        <h2>Solve</h2>
         <table class="try__table"></table>
         <div class="try__btns">
           <button class="btns__verify">Verify</button>
