Improved animations JS

--- a/apl/animations/christmas.html
+++ b/apl/animations/christmas.html
@@ -30,14 +30,15 @@
       <p>Enter an image made with characters, or just press animate!</p>
       <p>But remember to don't use the snow symbol: '*'</p>
     </div>
+
     <div class="section">
       <div class="input">
-        <button class="input__btn">Animate</button>
-        <textarea class="input__text" cols="30" rows="18"></textarea>
+        <div><button>Animate</button></div>
+        <textarea cols="30" rows="18"></textarea>
       </div>
       <div class="output">
-        <button class="output__btn hide">Finish</button>
-        <textarea class="output__text hide" cols="30" rows="18"></textarea>
+        <div><button>Finish</button></div>
+        <textarea cols="30" rows="18"></textarea>
       </div>
     </div>
   </main>
