--- a/apl/animations/happy_new_year.html
+++ b/apl/animations/happy_new_year.html
@@ -30,8 +30,8 @@
       <p>Enjoy the following animation!</p>
     </div>
     <div class="input">
-      <button class="input__btn">Start</button>
-      <textarea class="input__text" cols="27" rows="6"></textarea>
+      <div><button>Start</button></div>
+      <textarea cols="27" rows="6"></textarea>
     </div>
   </main>
 
