--- a/apl/logic_games/tree.html
+++ b/apl/logic_games/tree.html
@@ -32,7 +32,7 @@
       <section class="input">
         <div class="input__dimension">
           <input class="dimension__value" type="number" placeholder="Dimension">
-          <button class="dimension__button" type="button">✓</button>
+          <button class="dimension__button">✓</button>
         </div>
 
         <div class="input__table"></div>
