Added menu animation

--- a/base/header.html
+++ b/base/header.html
@@ -17,6 +17,14 @@
     <a href="/" class="name">Master Quiz</a>
 
     <nav class="navbar">
+      <div id="webapp_cover">
+        <div id="menu_button">
+          <input type="checkbox" id="menu_checkbox">
+          <label for="menu_checkbox" id="menu_label">
+            <div id="menu_text_bar"></div>
+          </label>
+        </div>
+      </div>
       <div class="ham">
         <span class="bar1"></span>
         <span class="bar2"></span>
