--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
             <ol>
               <li>Tree</li>
               <li>Electric charges</li>
+              <li>Hitori</li>
+              <li>Save the cow</li>
             </ol>
             <p>Try them!</p>
           </a>
