Redesigned mobile version

--- a/base/header.html
+++ b/base/header.html
@@ -17,13 +17,11 @@
     <a href="/" class="name">Master Quiz</a>
 
     <nav class="navbar">
-      <div id="webapp_cover">
-        <div id="menu_button">
-          <input type="checkbox" id="menu_checkbox">
-          <label for="menu_checkbox" id="menu_label">
-            <div id="menu_text_bar"></div>
-          </label>
-        </div>
+      <div class="hamMQ">
+        <label>MQ</label>
+        <span class="bar1MQ"></span>
+        <span class="bar2MQ"></span>
+        <span class="bar3MQ"></span>
       </div>
       <div class="ham">
         <span class="bar1"></span>
