--- a/base/logic_games_nav.html
+++ b/base/logic_games_nav.html
@@ -8,8 +8,8 @@
 <body>
   <nav>
     <ul class="pages">
-      <li><a href="/apl/logic_games/logic_games.html">Logic Games</a></li>
-      <li><a href="/apl/animations/animations.html">Animations</a></li>
+      <li><a href="/apl/logic_games/">Logic Games</a></li>
+      <li><a href="/apl/animations/">Animations</a></li>
     </ul>
   </nav>
 </body>
