--- a/base/footer.html
+++ b/base/footer.html
@@ -8,12 +8,18 @@
 <body>
   <footer>
     <div class="inner-footer">
+      <div class="drops">
+        <a class="drop" href="/"><img src="/img/home.png"></a>
+        <a class="drop" href="/#dyalog-apl"><img src="/img/dyalog-apl.png"></a>
+        <a class="drop" href="/#contact-me"><img src="/img/contact-me.png"></a>
+        <a class="drop" href="/#https://github.com/Masterquiz/" target='blank'><img src="/img/github.png"></a>
+      </div>
       <div class="quick-links">
         <ul>
           <li class="quick-items"><a href="/">Home</a></li>
           <li class="quick-items"><a href="/#dyalog-apl">Dyalog APL</a></li>
           <li class="quick-items"><a href="/#contact-me">Contact me</a></li>
-          <li class="quick-items"><a href="https://github.com/Masterquiz/" target='_'>GitHub</a></li>
+          <li class="quick-items"><a href="https://github.com/Masterquiz/" target='blank'>GitHub</a></li>
         </ul>
       </div>
     </div>
