--- a/base/footer.html
+++ b/base/footer.html
@@ -12,7 +12,7 @@
         <a class="drop" href="/"><img src="/img/home.png"></a>
         <a class="drop" href="/#dyalog-apl"><img src="/img/dyalog-apl.png"></a>
         <a class="drop" href="/#contact-me"><img src="/img/contact-me.png"></a>
-        <a class="drop" href="/#https://github.com/Masterquiz/" target='blank'><img src="/img/github.png"></a>
+        <a class="drop" href="https://github.com/Masterquiz/" target='blank'><img src="/img/github.png"></a>
       </div>
       <div class="quick-links">
         <ul>
