--- a/base/header.html
+++ b/base/header.html
@@ -2,38 +2,38 @@
 <html lang="en">
 
 <head>
-  <link rel="stylesheet" href="/css/main.css">
-  <link rel="stylesheet" href="/css/base/header.css">
+    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/base/header.css">
 
-  <!-- Font: Oleo Script -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oleo+Script:wght@700&display=swap">
+    <!-- Font: Oleo Script -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oleo+Script:wght@700&display=swap">
 </head>
 
 <body>
-  <header>
-    <img class="logo" src="/img/logo.svg">
-    <a href="/" class="name">Master Quiz</a>
+    <header id="home">
+        <img class="logo" src="/img/logo.svg">
+        <a href="/#home" class="name">Master Quiz</a>
 
-    <nav class="navbar">
-      <div class="hamMQ">
-        <label>MQ</label>
-        <span class="bar1MQ"></span>
-        <span class="bar2MQ"></span>
-        <span class="bar3MQ"></span>
-      </div>
-      <div class="ham">
-        <span class="bar1"></span>
-        <span class="bar2"></span>
-        <span class="bar3"></span>
-      </div>
-      <ul class="menu">
-        <li><a href="/#dyalog-apl">Dyalog APL</a></li>
-        <li><a href="/#contact-me">Contact Me</a></li>
-      </ul>
-    </nav>
-  </header>
+        <nav class="navbar">
+            <div class="hamMQ">
+                <label>MQ</label>
+                <span class="bar1MQ"></span>
+                <span class="bar2MQ"></span>
+                <span class="bar3MQ"></span>
+            </div>
+            <div class="ham">
+                <span class="bar1"></span>
+                <span class="bar2"></span>
+                <span class="bar3"></span>
+            </div>
+            <ul class="menu">
+                <li><a href="/#dyalog-apl">Dyalog APL</a></li>
+                <li><a href="/#contact-me">Contact Me</a></li>
+            </ul>
+        </nav>
+    </header>
 </body>
 
 </html>
